# src/swagger.json
@@ -166,7 +166,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "Recipe": {
+                "User": {
                   "type": "object",
                   "properties": {
                     "title": {
@@ -185,8 +185,7 @@
             }
           }
         },
-      
-
+  
 
         "responses": {
           "200": {
@@ -214,6 +213,94 @@
                   "Usuário não encontrado": {
                     "value": {
                       "message": "Usuário não encontrado" 
+                    }
+                  }
+                 
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deletar usuário",
+        "description": "Essa rota será responsável por excluir a conta do usuário",
+        "tags": ["User"],
+      
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Users": {
+                    "value": {
+                      "message": "Sua conta foi apagada"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Atualizar conta de usuário",
+        "description": "Essa rota será responsável por atualizar a conta do usuário",
+        "tags": ["User"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "User": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string"
+                    }
+                  }
+                }
+              },
+              "examples": {
+                "user": {
+                  "value":{
+                    "email": "douglasfelipe",
+                    "password": "123456789101",
+                    "username": "douglas"
+                  }
+                },
+                "axios-request": {
+                  "value": {
+                      "request front": "Bearer token"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Users": {
+                    "value": {
+                      "message": "Seus dados foram alterados"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Usuário não existe",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Usuário não encontrado": {
+                    "value": {
+                      "message": "Usuário não existe" 
                     }
                   }
                  
@@ -276,6 +363,87 @@
                   "Email": {
                     "value": {
                       "message": "Email não encontrado"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/recipe/first": {
+      "get": {
+        "summary": "Listar as três primeiras",
+        "description": "Essa rota será responsável por listar as três receitas mais recentes",
+        "tags": ["Recipe"],
+
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Recipe": {
+                    "value": {
+                      "data": [
+                        {
+                          "_id": "61915cc2f59c50c8a0f3140d",
+                          "title": "Coxinha",
+                          "description": "Teste",
+                          "img": "uploads/images/1636916418348-Screenshot from 2021-11-12 16-32-23.png",
+                          "category": "salgados",
+                          "level": "fácil",
+                          "preparation": "sdfsdf",
+                          "ingredients": "sdfsfd",
+                          "time": "2 horas",
+                          "author": {
+                            "_id": "618fc2a1981e3213176b8dc4",
+                            "username": "Douglas"
+                          },
+                          "likes": [],
+                          "createdAt": "2021-11-14T19:00:18.355Z",
+                          "updatedAt": "2021-11-14T19:00:18.355Z",
+                          "__v": 0
+                        },
+                        {
+                          "_id": "61915cc2f59c50c8a0f3140a",
+                          "title": "Empada",
+                          "description": "Teste",
+                          "img": "uploads/images/1636916418010-Screenshot from 2021-11-12 16-32-23.png",
+                          "category": "salgados",
+                          "level": "fácil",
+                          "preparation": "sdfsdf",
+                          "ingredients": "sdfsfd",
+                          "time": "2 horas",
+                          "author": {
+                            "_id": "618fc2a1981e3213176b8dc4",
+                            "username": "Douglas"
+                          },
+                          "likes": [],
+                          "createdAt": "2021-11-14T19:00:18.020Z",
+                          "updatedAt": "2021-11-14T19:00:18.020Z",
+                          "__v": 0
+                        },
+                        {
+                          "_id": "61915cc1f59c50c8a0f31407",
+                          "title": "Bolo de cenoura",
+                          "description": "Teste",
+                          "img": "uploads/images/1636916417411-Screenshot from 2021-11-12 16-32-23.png",
+                          "category": "bolos",
+                          "level": "fácil",
+                          "preparation": "sdfsdf",
+                          "ingredients": "sdfsfd",
+                          "time": "2 horas",
+                          "author": {
+                            "_id": "618fc2a1981e3213176b8dc4",
+                            "username": "Douglas"
+                          },
+                          "likes": [],
+                          "createdAt": "2021-11-14T19:00:17.427Z",
+                          "updatedAt": "2021-11-14T19:00:17.427Z",
+                          "__v": 0
+                        }
+                      ]
                     }
                   }
                 }
@@ -661,6 +829,268 @@
                       "createdAt": "2021-11-06T22:59:01.927Z",
                       "updatedAt": "2021-11-06T22:59:01.927Z",
                       "__v": 0
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/recipe/id/like": {
+      "put": {
+        "summary": "Adicionar/Remover dos favoritos",
+        "description": "Essa rota será resposável para o usuário logado, adicionar receitas aos favoritos, e ao mesmo tempo remover",
+        "tags": ["Recipe"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "Recipe": {
+                  "type": "object",
+                  "properties": {
+                    "title": {
+                      "type": "string"
+                    }
+                  }
+                }
+              },
+              "examples": {
+                "Recipe": {
+                  "value": {
+                    "userId": "618fc2a1981e3213176b8dc4"
+                  }
+                },
+                "axios-request": {
+                  "value": {
+                      "request front": "Bearer token"
+                  }
+                }
+              }
+            }
+          }
+        },
+
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Adicionar aos favoritos": {
+                    "value": {
+                      "message": "Adicionado aos favoritos"
+                    }
+                  },
+                  "Remover dos favoritos": {
+                    "value": {
+                      "message": "Removido dos favoritos"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/recipe/favorites/id": {
+      "get": {
+        "summary": "Receitas favoritas do usuário",
+        "description": "Essa rota será responsável por listar as receitas favoritas do usuário",
+        "tags": ["Recipe"],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Recipe": {
+                    "value": {
+                      "_id": "619032c575ec0df7bfb232f8",
+                      "title": "Coxinha",
+                      "description": "Teste",
+                      "img": "uploads/images/1636840133482-Screenshot from 2021-11-12 16-32-23.png",
+                      "category": "salgados",
+                      "level": "fácil",
+                      "preparation": "sdfsdf",
+                      "ingredients": "sdfsfd",
+                      "time": "2 horas",
+                      "author": "618fc2a1981e3213176b8dc4",
+                      "likes": [
+                        "618fc2a1981e3213176b8dc4",
+                        "619035c19678abad324e344f"
+                      ],
+                      "createdAt": "2021-11-13T21:48:53.493Z",
+                      "updatedAt": "2021-11-13T22:20:17.860Z",
+                      "__v": 0
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/comment/id": {
+      "get": {
+        "summary": "Mostrar comentários de determinada receita",
+        "description": "Essa rota será responsável por listar os comentários de uma receita (Atenção! O ID que é passado para listar é da receita)",
+        "tags": ["Comment"],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Comment": {
+                    "value": {
+                      "data": [
+                        {"_id": "6191539b59d721fe0fbf7d87",
+                        "description": "Muito boa a receita",
+                        "author": {
+                          "_id": "619035c19678abad324e344f",
+                          "username": "Douglas"
+                        },
+                        "recipeId": "61902f5c9f3b98f286c5f7a1",
+                        "createdAt": "2021-11-14T18:21:15.541Z",
+                        "updatedAt": "2021-11-14T18:21:15.541Z",
+                        "__v": 0}
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "summary": "Atualizar comentário",
+        "description": "Essa rota será responsável por atualizar comentários (Atenção! O ID que é passado para ser atualizado é do comentário)",
+        "tags": ["Comment"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "Comment": {
+                  "type": "object",
+                  "properties": {
+                    "description": {
+                      "type": "string"
+                    }
+                  }
+                }
+              },
+              "examples": {
+                "Comment": {
+                  "value": {
+                    "description": "Ruim a receita"
+                  }
+                },
+                "axios-request": {
+                  "value": {
+                      "request front": "Bearer token"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Comment": {
+                    "value": {
+                      "updateComment":{
+                        "_id": "61915633f12e132ff804b7c3",
+                        "description": "Uma bosta",
+                        "author": "619035c19678abad324e344f",
+                        "recipeId": "61902f5c9f3b98f286c5f7a1",
+                        "createdAt": "2021-11-14T18:32:19.810Z",
+                        "updatedAt": "2021-11-14T18:33:04.019Z",
+                        "__v": 0
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deletar comentário",
+        "description": "Essa rota será responsável por deletar algum comentário por ID",
+        "tags": ["Comment"],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Comment": {
+                    "value": {
+                      "message": "Deletado com sucesso!"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/comment": {
+      "post": {
+        "summary": "Criar comentários",
+        "description": "Essa rota será responsável por criar comentários",
+        "tags": ["Comment"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "Comment": {
+                  "type": "object",
+                  "properties": {
+                    "description": {
+                      "type": "string"
+                    }
+                  }
+                }
+              },
+              "examples": {
+                "Comment": {
+                  "value": {
+                    "recipeId": "61902f5c9f3b98f286c5f7a1",
+                    "description": "Ruim a receita"
+                  }
+                },
+                "axios-request": {
+                  "value": {
+                      "request front": "Bearer token"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "examples": {
+                  "Comment": {
+                    "value": {
+                      "comment": {
+                        "description": "Ruim a receita",
+                        "author": "619035c19678abad324e344f",
+                        "recipeId": "61902f5c9f3b98f286c5f7a1",
+                        "_id": "61915633f12e132ff804b7c3",
+                        "createdAt": "2021-11-14T18:32:19.810Z",
+                        "updatedAt": "2021-11-14T18:32:19.810Z",
+                        "__v": 0
+                      }
                     }
                   }
                 }
